--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -13,6 +13,10 @@
     /*padding: 1rem;*/
 }
 
+#igsn .pkpFormField--text__input {
+    width: 100%;
+}
+
 .pidManager-Hide {
     display: none !important;
 }
