--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -13,10 +13,42 @@
     /*padding: 1rem;*/
 }
 
-#igsn .pkpFormField--text__input {
+#pidManagerIgsn .pkpFormField--text__input {
     width: 100%;
 }
 
 .pidManager-Hide {
     display: none !important;
+}
+
+.pidManagerSearchResults {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    height: 100px;
+    overflow-y: scroll;
+}
+
+.pidManagerSearchResultsLoading {
+    text-align: center;
+    line-height: 98px;
+}
+
+.pidManagerSearchResultsList ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.pidManagerSearchResultsList ul li {
+    padding: 0;
+}
+
+.pidManagerSearchResultsList ul li a {
+    display: block;
+    cursor: pointer;
+    padding: 0.3rem;
+}
+
+.pidManagerSearchResultsList ul li a:hover {
+    background-color: #f1f1f1;
 }
