--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -9,6 +9,10 @@
  * @brief Backend stylesheet for the plugin.
  */
 
+input[name="igsn"] {
+    display: none;
+}
+
 #pidManagerIgsn .pkpFormField--text__input {
     width: 100%;
 }
