--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -9,97 +9,137 @@
  * @brief Backend stylesheet for the plugin.
  */
 
-#pidManagerIgsn .header {
-    max-height: unset;
-}
+#pidManagerIgsn {
+    padding-top: 32px;
+    padding-bottom: 0;
+    margin-bottom: 32px;
+    border-left: 1px solid #ddd;
 
-#pidManagerIgsn .content {
-    padding-top: 1rem;
-}
+    table th span {
+        background-color: #f9f9f9;
+        border-bottom: 1px solid #ddd;
+    }
 
-#pidManagerIgsn .content .pkpButton {
-    height: 40px;
-    min-width: 40px;
-    line-height: 40px;
-}
+    #pidManagerSearchResults {
+        background-color: #fafafa;
+        border: 1px solid #ccc;
+        height: 150px;
+        overflow-y: auto;
+        position: absolute;
+        width: calc(100% - 160px);
+        box-shadow: 0 .75rem .75rem #0003;
+        margin-top: -30px;
+        margin-left: 10px;
 
-#pidManagerIgsn .content table {
-    width: 100%;
-}
+        td a {
+            display: block;
+            cursor: pointer;
+            padding: 0.3rem;
+            color: inherit;
+        }
 
-#pidManagerIgsn .content td {
-    vertical-align: top;
-}
+        td a:hover {
+            background-color: #f1f1f1;
+        }
+    }
 
-#pidManagerIgsn .content th.column3 {
-    width: 42px;
-}
+    /* class focussed */
 
-#pidManagerIgsn .content th span {
-    display: block;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-}
+    .disabled {
+        pointer-events: none;
+        cursor: default;
+        opacity: 0.3;
+    }
 
-#pidManagerIgsn .footer {
-    margin-right: -2rem;
-    margin-left: -2rem;
-    border-bottom: 1px solid #ddd;
-}
+    .hide {
+        display: none !important;
+    }
 
-#pidManagerSearchResults {
-    background-color: #fafafa;
-    border: 1px solid #ccc;
-    height: 150px;
-    overflow-y: scroll;
-}
+    .center {
+        text-align: center;
+    }
 
-#pidManagerSearchResults span {
-    display: inline-block;
-    padding-top: 60px;
-    width: 100%;
-    text-align: center;
-}
+    .h-40 {
+        height: 40px;
+    }
 
-#pidManagerSearchResults td {
-    padding: 0;
-}
+    .h-42 {
+        height: 42px;
+    }
 
-#pidManagerSearchResults td.column1 {
-    width: 24px;
-}
+    .h-51 {
+        height: 51px;
+    }
 
-#pidManagerSearchResults td a {
-    display: block;
-    cursor: pointer;
-    padding: 0.3rem;
-    line-height: 1.4rem;
-}
+    .min-w-40 {
+        min-width: 40px;
+    }
 
-#pidManagerSearchResults td a:hover {
-    background-color: #f1f1f1;
-}
+    .line-height-40 {
+        line-height: 40px;
+    }
 
-.pidManager-Disabled {
-    pointer-events: none;
-    cursor: default;
-    opacity: 0.6;
-}
+    .w-42 {
+        width: 42px;
+    }
 
-.pidManager-Hide {
-    display: none !important;
-}
+    .w-full {
+        width: 100%;
+    }
 
-.pidManager-Strikethrough {
-    text-decoration: line-through;
+    .p-0 {
+        padding: 0;
+    }
+
+    .p-5 {
+        padding: 5px;
+    }
+
+    .pb-0 {
+        padding-bottom: 0;
+    }
+
+    .pt-16 {
+        padding-top: 16px;
+    }
+
+    .pt-32 {
+        padding-top: 32px;
+    }
+
+    .pt-60 {
+        padding-top: 60px;
+    }
+
+    .mb-32 {
+        margin-bottom: 32px;
+    }
+
+    .mt-0 {
+        margin-top: 0;
+    }
+
+    .block {
+        display: block;
+    }
+
+    .inline-block {
+        display: inline-block;
+    }
+
+    /* OJS elements */
+
+    .pkpFormField--text__input {
+        width: 100%;
+    }
+
+    .pkpFormPages .pkpFormPage .pkpFormGroup {
+        display: none;
+        padding: .35em .75em .625em;
+    }
 }
 
 /* OJS elements */
-#pidManagerIgsn .pkpFormField--text__input {
-    width: 100%;
-}
-
-#pidManagerIgsn .pkpFormPages .pkpFormPage .pkpFormGroup {
-    display: none;
-    padding: .35em .75em .625em;
+.pkpPublication__tabs > .pkpTabs__buttons {
+    border-right: 0;
 }
