--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -9,7 +9,8 @@
  * @brief Backend stylesheet for the plugin.
  */
 
-#pidManagerIgsn {
+#pidManagerIgsn,
+#pidManagerPidinst {
     padding-top: 32px;
     padding-bottom: 0;
     margin-bottom: 32px;
