addStyleSheet method for adding backend.css and frontend.css

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -8,3 +8,15 @@
  * @style pidManager
  * @brief Frontend stylesheet for the plugin.
  */
+
+
+#igsn,
+#pidinst {
+    .align-justify {
+        text-align: justify;
+    }
+
+    .description-color {
+        color: rgba(0, 0, 0, 0.54);
+    }
+}
