--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -21,5 +21,12 @@
 
     .pkpButton {
     cursor: pointer;
+    font-weight: bold;
+    }
+
+    /* Entry styles */
+    .igsn-item-entry:last-of-type,
+    .pidinst-item-entry:last-of-type {
+        margin-bottom: 1.43rem;
     }
 }
