Making compatible for ojs 3.5 (work in progress)

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -8,3 +8,25 @@
  * @style pidManager
  * @brief Frontend stylesheet for the plugin.
  */
+
+#igsn,
+#pidinst {
+    .align-justify {
+        text-align: justify;
+    }
+
+    .description-color {
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .pkpButton {
+        cursor: pointer;
+        font-weight: bold;
+    }
+
+    /* Entry styles */
+    .igsn-item-entry:last-of-type,
+    .pidinst-item-entry:last-of-type {
+        margin-bottom: 1.43rem;
+    }
+}
