Base templates, reuse in igsn / pidinst, fixes, refactoring

--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -46,6 +46,10 @@
 
     /* class focussed */
 
+    .align-justify {
+        text-align: justify;
+    }
+
     .disabled {
         pointer-events: none;
         cursor: default;
